--- a/logics.html
+++ b/logics.html
@@ -61,12 +61,11 @@
     </nav>
 
     <section class="bienvenida">
-        <h1>Bienvenido</h1>
-        <h3>Usuario</h3>
+        <h1 class="hidden">LogicS</h1>
+        <h3 class="hidden">Bienvenido Usuario</h3>
     </section>
 
     <section class="logics">
-        <h1>LogicS</h1>
         <div id="controls">
             <div class="escribe">
                 <label for="expression">Expresión lógica</label>
@@ -100,6 +99,7 @@
 
         <div id="variableInputs" style="margin-bottom: 20px;">
         </div>
+        
 
         <div id="outputDiv">
             <strong>Salida:</strong> <span id="outputValue">N/A</span>
