--- a/biblioteca.html
+++ b/biblioteca.html
@@ -49,11 +49,11 @@
       </label>
 
       <ul class="submenu">
-        <li><a href="index.html"><span>Inicio</span><div><i class="fa-solid fa-house"></i></div></a></li>
-        <li><a href="biblioteca.html"><span>Biblioteca</span><div><i class="fa-solid fa-book"></i></div></a></li>
-        <li><a href=""><span>LogicS</span><div><img src="./img/Logics.svg" width="20px"></div></a></li>
-        <li><a href=""><span>Servicio</span><div><i class="fa-regular fa-handshake"></i></div></a></li>
-        <li><a href=""><span>Dudas</span><div><i class="fa-solid fa-question"></i></div></a></li>
+        <li><a href="carga.html?next=index.html"><span>Inicio</span><div><i class="fa-solid fa-house"></i></div></a></li>
+      <li><a href="carga.html?next=biblioteca.html"><span>Biblioteca</span><div><i class="fa-solid fa-book"></i></div></a></li>
+      <li><a href="carga.html?next=logics.html"><span>LogicS</span><div><img src="./img/Logics.svg" width="20px"></div></a></li>
+      <li><a href="carga.html?next=servicios.html"><span>Servicio</span><div><i class="fa-regular fa-handshake"></i></div></a></li>
+      <li><a href="carga.html?next=instrucciones.html"><span>Dudas</span><div><i class="fa-solid fa-question"></i></div></a></li>
       </ul>
     </nav>
 
