--- a/logics.html
+++ b/logics.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/icon.png" type="image/x-icon">
     <title>LogicS</title>
     <link rel="stylesheet" href="./css/boton.css">
     <link rel="stylesheet" href="./css/logics.css">
@@ -52,11 +53,11 @@
         </label>
     
         <ul class="submenu">
-          <li><a href="index.html"><span>Inicio</span><div><i class="fa-solid fa-house"></i></div></a></li>
-          <li><a href="biblioteca.html"><span>Biblioteca</span><div><i class="fa-solid fa-book"></i></div></a></li>
-          <li><a href="logics.html"><span>LogicS</span><div><img src="./img/Logics.svg" width="20px"></div></a></li>
-          <li><a href=""><span>Servicio</span><div><i class="fa-regular fa-handshake"></i></div></a></li>
-          <li><a href=""><span>Dudas</span><div><i class="fa-solid fa-question"></i></div></a></li>
+            <li><a href="carga.html?next=index.html"><span>Inicio</span><div><i class="fa-solid fa-house"></i></div></a></li>
+            <li><a href="carga.html?next=biblioteca.html"><span>Biblioteca</span><div><i class="fa-solid fa-book"></i></div></a></li>
+            <li><a href="carga.html?next=logics.html"><span>LogicS</span><div><img src="./img/Logics.svg" width="20px"></div></a></li>
+            <li><a href="carga.html?next=servicios.html"><span>Servicio</span><div><i class="fa-regular fa-handshake"></i></div></a></li>
+            <li><a href="carga.html?next=instrucciones.html"><span>Dudas</span><div><i class="fa-solid fa-question"></i></div></a></li>
         </ul>
     </nav>
 
@@ -65,8 +66,25 @@
         <h3 class="hidden">Bienvenido Usuario</h3>
     </section>
 
+    <section class="ayuda">
+        <h3 class="hidden">Guia</h3>
+        <div class="hidden">Esto es <span class="log">LogicS</span>, bienvenido al simulador de circuitos logicos, el corazón de  <span class="log">LogicS</span>; ingresa una expresión logica y ejecuta ó ingrese un archivo csv el cual contenga expresiones logicas y despues
+            selecciona una en la lista que deriva de los datos del archivo, al finalizar puedes descargar el diagrama generado en formato png, pdf o la tabla de verdad en csv.
+        </div>
+        <p class="hidden">¿Quieres conocer más a detalle como funciona <span class="log">LogicS</span>? Presiona Aqui</p>
+        <a href="carga.html?next=instrucciones.html" class="hidden">
+            <div class="help">
+                Instrucciones
+            </div>
+        </a>
+    </section>
+
     <section class="logics">
         <div id="controls">
+            <div class="hello">
+                <i class="fa-solid fa-square-binary hidden"></i>
+                <h2 class="hidden">Simulador</h2>
+            </div>
             <div class="escribe">
                 <label for="expression">Expresión lógica</label>
                 <input type="text" id="expression" placeholder="LogicS" oninput="validateExpressionInput(event)"> 
@@ -115,6 +133,7 @@
         <div class="descargas">
             <button onclick="downloadAsPNG()"><i class="fa-solid fa-file-image"></i></button>
             <button onclick="downloadAsPDF()"><i class="fa-solid fa-file-pdf"></i></button>
+            <button onclick="downloadTruthTableAsCSV()"><i class="fa-solid fa-file-csv"></i></button>
         </div>
     </section>
 
