--- a/instrucciones.html
+++ b/instrucciones.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instrucciones</title>
     <link rel="icon" href="./img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/biblioteca.css">
+    <link rel="stylesheet" href="./css/instrucciones.css">
     <link rel="stylesheet" href="./css/boton.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
 
       <ul class="submenu">
         <li><a href="carga.html?next=index.html"><span>Inicio</span><div><i class="fa-solid fa-house"></i></div></a></li>
-      <li><a href="carga.html?next=biblioteca.html"><span>Biblioteca</span><div><i class="fa-solid fa-book"></i></div></a></li>
+      <li><a href="carga.html?next=biblioteca.html"><span>Actualizaciones y errores</span><div><i class="fa-solid fa-book"></i></div></a></li>
       <li><a href="carga.html?next=logics.html"><span>LogicS</span><div><img src="./img/Logics.svg" width="20px"></div></a></li>
       <li><a href="carga.html?next=servicios.html"><span>Servicio</span><div><i class="fa-regular fa-handshake"></i></div></a></li>
       <li><a href="carga.html?next=instrucciones.html"><span>Dudas</span><div><i class="fa-solid fa-question"></i></div></a></li>
@@ -61,6 +61,76 @@
     <section class="bienvenida">
         <h1>Bienvenido</h1>
         <h3>Usuario</h3>
+    </section>
+
+    <section class="instrucciones">
+        <h3 class="hidden">Instrucciones</h3>
+        <div class="textos">
+            <h4 class="hidden">Expresiones</h4>
+            <p>
+                LogicS ha sido creado para fabricar circuitos logicos con base en expresiones logicas, sin embargo, como podemos asegurar que la aplicación 
+                tendra el resultado obtenido; para esto sigue las instrucciones de construccón de expresiones que se presentan a continuación. 
+            </p>
+            <ul>
+                <li>
+                    <div>
+                        <h4>Variables</h4>
+                        <p>
+                            Las variables en el simulador, unicamente pueden ser escritas con letras, la construccion del diagrama no dependera de la longitud de la 
+                            variable sin embargo,  
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>Uso de simbolos logicos</h4>
+                        <p>
+                            El uso de simbolos logicos es compatible en la caja de texto, el simulador funcionara correctamente si se colocan los simbolos ∨, ∧, ¬
+                            ;cabe resaltar que para el uso de "¬", este simbolo se debe colocar antes de la variable, por ejemplo "¬A". Los simbolos se pueden colocar 
+                            para mayor facilidad de los usuarios con los botones de ayuda debajo de la caja de texto.
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>Uso de palabras como conector logico</h4>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>Parentesis</h4>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>CSV</h4>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="simulador">
+            <h4 class="hidden">Simulador</h4>
+            <p>
+                El simulador LogicS cuenta con tres funciones principales
+            </p>
+            <ul>
+                <li>
+                    <div>
+                        <h4>Creador de diagramas de circuito lógico</h4>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>Simulador de Salida</h4>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h4>Tabla de verdad</h4>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <footer class="footer">
