--- a/instrucciones.html
+++ b/instrucciones.html
@@ -77,7 +77,8 @@
                         <h4>Variables</h4>
                         <p>
                             Las variables en el simulador, unicamente pueden ser escritas con letras, la construccion del diagrama no dependera de la longitud de la 
-                            variable sin embargo,  
+                            variable sin embargo,  la generación de un resultado simulado y de la tabla de verdad será fallida lanzando un mensaje de error por lo que 
+                            unicamente se deben usar variables de 1 caracter de longitud si se desea obtener todas las funciones de LogicS.
                         </p>
                     </div>
                 </li>
@@ -94,6 +95,10 @@
                 <li>
                     <div>
                         <h4>Uso de palabras como conector logico</h4>
+                        <p>
+                            El uso de palabras como conector logico es compatible en la caja de texto, el simulador funcionará correctamente si se colocan las pablabras 
+                            AND, OR Y NOT, tomando en cuanta que al igual que con el simbolo not, la palabra debe colocarse atras de la variable
+                        </p>
                     </div>
                 </li>
                 <li>
