--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="hidden">
         <i class="fa-solid fa-book-bookmark"></i>
-        <p>Biblioteca con conceptos relacionados a los circuitos logicos</p>
+        <p>Descarga de diagrama de circuito logico en diferentes formatos</p>
       </div>
     </div>
   </div>
